--- a/ArabaSatisOtomasyon/Views/Shared/_Layout.cshtml
+++ b/ArabaSatisOtomasyon/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <link href="~/Content/css/color.css" rel="stylesheet">
     <link href="~/Content/css/datepicker.css" rel="stylesheet">
     <link href="~/Content/css/responsive.css" rel="stylesheet">
-    <link href="build/mediaelementplayer.css" rel="stylesheet">
+    <link href="~/Content/extra-images/mediaelementplayer.css" rel="stylesheet">
     <link href="~/Content/css/style.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
@@ -31,7 +31,7 @@
         <header id="automobile-header" class="automobile-header-one">
             <div class="container">
                 <div class="row">
-                    <aside class="col-md-2"> <a href="index.html" class="automobile-logo"><img src="images/logo.png" alt=""></a> </aside>
+                    <aside class="col-md-2"> <a href="index.html" class="automobile-logo"><img src="Content/extra-images/logo.png" alt=""></a> </aside>
                     <aside class="col-md-10">
 
                         <nav class="navbar navbar-default">
@@ -211,7 +211,7 @@
 
 
 </html>
-<script type="text/javascript" src="script/jquery.js"></script>
+<script type="text/javascript" src="~/Content/script/jquery.js"></script>
 <script src="../../../code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script type="text/javascript" src="~/Content/script/bootstrap.min.js"></script>
 <script type="text/javascript" src="~/Content/script/slick.slider.min.js"></script>
