--- a/ArabaSatisOtomasyon/Views/Shared/_Layout.cshtml
+++ b/ArabaSatisOtomasyon/Views/Shared/_Layout.cshtml
@@ -196,7 +196,7 @@
                                     <div class="automobile-cartbox"> No products in the cart. </div>
                                 </li>
                             </ul>
-                            <a href="vehicle.html" class="automobile-sell-btn automobile-bgcolor">Sell My Car</a>
+                            <a href="vehicle.html" class="automobile-sell-btn automobile-bgcolor">Arabayı Satıyoruz</a>
                         </div>
                     </aside>
                 </div>
